--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>
-  {{title}}
-</h1>
+<nav>
+ <a routerLink="/list" routerLinkActive="active">Productes</a>
+ <a routerLink="" routerLinkActive="active">Temps de Lliurament</a>
+  <a routerLink="" routerLinkActive="active">Contacte</a>
+ <a routerLink="/login" routerLinkActive="active">Desconnectar</a>
+</nav>
+<router-outlet></router-outlet>
